--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   local_dir: dist
-  github_token: $GITHUB_TOKEN
+  github_token: aefc72bee7801bc257ee8d5f47521cefe0462c65
   keep_history: true
   on:
     branch: master
