--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: node_js
 node_js:
-  - lts/*
+  - "10"
+cache:
+  directories:
+    - node_modules
 install:
-  - yarn install
+  - yarn
+before_script:
+  - chmod 777 ./deploy.sh
 script:
-  - yarn build
-deploy:
-  provider: pages
-  skip_cleanup: true
-  local_dir: dist
-  github_token: aefc72bee7801bc257ee8d5f47521cefe0462c65
-  keep_history: true
-  on:
-    branch: master
+  - ./deploy.sh
+branch: master
